@@ -1,3 +1,10 @@
+2009-07-16  Robin Stocker  <robin@nibor.org>
+
+	* src/totem-object.c (drop_video_cb, drag_video_cb):
+	* src/totem-private.h (TotemObject): When dragging the video and
+	then accidentally dropping it again on itself, ignore it instead
+	of restarting the video. (Closes: #578249)
+
 2009-07-14  Jan Schmidt  <thaytan@noraisin.net>
 
 	* src/backend/bacon-video-widget-gst-0.10.c (setup_vis):
